--- a/compose.yml
+++ b/compose.yml
@@ -6,5 +6,5 @@ services:
       dockerfile: Dockerfile
     network_mode: host
     volumes:
-      - ../:/root/app
+      - ./:/root/app
     command: ["sleep", "infinity"]
