--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,3 @@
-# Generated Cmake Pico project file
-
 cmake_minimum_required(VERSION 3.13)
 
 set(CMAKE_C_STANDARD 11)
@@ -9,19 +7,9 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # Initialise pico_sdk from installed location
 # (note this can come from environment, CMake cache etc)
 
-# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
-if(WIN32)
-    set(USERHOME $ENV{USERPROFILE})
-else()
-    set(USERHOME $ENV{HOME})
-endif()
 set(sdkVersion 2.2.0)
-set(toolchainVersion 14_2_Rel1)
+set(toolchainVersion 14_3_rel1)
 set(picotoolVersion 2.2.0-a4)
-set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
-if (EXISTS ${picoVscode})
-    include(${picoVscode})
-endif()
 # ====================================================================================
 # Valid values:
 #   pico
@@ -30,23 +18,18 @@ endif()
 set(PICO_BOARD pico2 CACHE STRING "Board type")
 
 # Pull in Raspberry Pi Pico SDK (must be before project)
-include(pico_sdk_import.cmake)
+include(/root/pico-sdk/external/pico_sdk_import.cmake)
 
 project(Main C CXX ASM)
 
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# Add executable. Default name is the project name, version 0.1
-
-add_subdirectory(pico_lib)
+# Add pico_lib dir
+add_subdirectory(../pico_lib build)
 
 add_executable(Main
     main.cpp
-)
-
-include_directories(
-    ${CMAKE_CURRENT_LIST_DIR}/Shared/includes
 )
 
 pico_set_program_name(Main "Main")
@@ -70,8 +53,7 @@ target_link_libraries(Main ${BASE_LIBS})
 # Add the standard include files to the build
 target_include_directories(Main PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
-    ${CMAKE_CURRENT_LIST_DIR}/Shared/includes
+    ${CMAKE_CURRENT_LIST_DIR}/pico_lib/includes
 )
 
 pico_add_extra_outputs(Main)
-
