--- a/compose.yml
+++ b/compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./build:/root/app/build
       - ./pico_lib:/root/pico_lib
+      - ./.pico-sdk:/root/.pico-sdk
       - ./main.cpp/:/root/app/main.cpp:ro
       - ./CMakeLists.txt:/root/app/CMakeLists.txt
     command: ["sleep", "infinity"]
