--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -14,16 +14,16 @@ RUN apt update && apt install -y \
     wget \
     ca-certificates
 
-# Install official ARM GCC toolchain (Debian’s GCC is too old for Pico)
+# Install official ARM GCC toolchain
 RUN wget https://developer.arm.com/-/media/Files/downloads/gnu/14.3.rel1/binrel/arm-gnu-toolchain-14.3.rel1-aarch64-arm-none-eabi.tar.xz && \
     tar -xf arm-gnu-toolchain-14.3.rel1-aarch64-arm-none-eabi.tar.xz && \
     mv arm-gnu-toolchain-14.3.rel1-aarch64-arm-none-eabi /opt/arm-toolchain && \
     rm arm-gnu-toolchain-14.3.rel1-aarch64-arm-none-eabi.tar.xz
 
-# Clone Pico SDK + submodules
+# Clone Pico SDK at specific stable version
 RUN git clone https://github.com/raspberrypi/pico-sdk.git && \
     cd pico-sdk && \
-    git submodule update --init
+    git submodule update --init --recursive
 
 ENV PICO_SDK_PATH=/root/pico-sdk
 ENV PICO_TOOLCHAIN_PATH=/opt/arm-toolchain
