--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(PICO_BOARD pico_w CACHE STRING "Board type")
+set(PICO_BOARD pico2_w CACHE STRING "Board type")
 
 include(/root/pico-sdk/external/pico_sdk_import.cmake)
 
@@ -24,15 +24,15 @@ pico_set_program_version(Main "0.1")
 pico_enable_stdio_uart(Main 1)
 pico_enable_stdio_usb(Main 1)
 
-target_link_libraries(Main PRIVATE
-    Shared
-    pico_stdlib)
+target_link_libraries(Main PRIVATE pico_stdlib)
 
 if((PICO_BOARD STREQUAL "pico_w") OR (PICO_BOARD STREQUAL "pico2_w"))
     target_link_libraries(Main PRIVATE
-        pico_cyw43_arch_lwip_poll
+        pico_cyw43_arch_lwip_threadsafe_background
     )
 endif()
+
+target_link_libraries(Main PRIVATE Shared)
 
 target_include_directories(Main PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
