--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -3,13 +3,13 @@ cmake_minimum_required(VERSION 3.13)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(PROJECT_NAME "Shared")
+set(PROJECT_NAME "Extern")
 
 # Pull in the Pico SDK
 # include(pico_sdk_import.cmake)
 # pico_sdk_init()
 
-file(GLOB_RECURSE SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+file(GLOB_RECURSE SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c")
 
 # Create a static library target
 add_library(${PROJECT_NAME} STATIC
@@ -20,9 +20,14 @@ add_library(${PROJECT_NAME} STATIC
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
     pico_stdlib
-    hardware_adc
-    hardware_i2c
 )
+
+if((PICO_BOARD STREQUAL "pico_w") OR (PICO_BOARD STREQUAL "pico2_w"))
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        pico_lwip_nosys
+        pico_cyw43_arch_lwip_threadsafe_background
+    )
+endif()
 
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}/include
