--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,65 +3,46 @@ cmake_minimum_required(VERSION 3.13)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(PROJECT_NAME Main)
 
-# Initialise pico_sdk from installed location
-# (note this can come from environment, CMake cache etc)
+set(PICO_BOARD pico2_w CACHE STRING "Board type")
 
-set(sdkVersion 2.2.0)
-set(toolchainVersion 14_3_rel1)
-set(picotoolVersion 2.2.0-a4)
-# ====================================================================================
-# Valid values:
-#   pico
-#   pico2
-#   pico_w
-#   pico2_w
-set(PICO_BOARD pico2 CACHE STRING "Board type")
-
-# Valid values:
-#   PICO
-#   PICO_W
-#   PICO_2
-#   PICO_2_W
-add_compile_definitions(PICO_BOARD_TYPE=PICO_2)
-
-# Pull in Raspberry Pi Pico SDK (must be before project)
 include(/root/pico-sdk/external/pico_sdk_import.cmake)
 
-project(Main C CXX ASM)
+project(${PROJECT_NAME} C CXX ASM)
 
-# Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# Add pico_lib dir
-add_subdirectory(../pico_lib build)
+add_subdirectory(../pico_lib pico_lib_build)
+add_subdirectory(extern)
 
-add_executable(Main
+add_executable(${PROJECT_NAME}
     main.cpp
 )
 
-pico_set_program_name(Main "Main")
-pico_set_program_version(Main "0.1")
+pico_set_program_name(${PROJECT_NAME} "${PROJECT_NAME}")
+pico_set_program_version(${PROJECT_NAME} "0.1")
 
-# Modify the below lines to enable/disable output over UART/USB
-pico_enable_stdio_uart(Main 1)
-pico_enable_stdio_usb(Main 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 1)
+pico_enable_stdio_usb(${PROJECT_NAME} 1)
 
-set(BASE_LIBS
+target_link_libraries(${PROJECT_NAME} PRIVATE pico_stdlib)
+
+if((PICO_BOARD STREQUAL "pico_w") OR (PICO_BOARD STREQUAL "pico2_w"))
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        pico_cyw43_arch_lwip_threadsafe_background
+    )
+endif()
+
+target_link_libraries(${PROJECT_NAME} PRIVATE
+    Extern
     Shared
 )
 
-if((PICO_BOARD STREQUAL "pico_w") OR (PICO_BOARD STREQUAL "pico2_w"))
-    list(APPEND BASE_LIBS pico_cyw43_arch_none)
-endif()
-
-# Add the standard library to the build
-target_link_libraries(Main ${BASE_LIBS})
-
-# Add the standard include files to the build
-target_include_directories(Main PRIVATE
+target_include_directories(${PROJECT_NAME} PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
-    ${CMAKE_CURRENT_LIST_DIR}/pico_lib/includes
+    ${CMAKE_CURRENT_LIST_DIR}/extern/include
+    ${CMAKE_CURRENT_LIST_DIR}/pico_lib/include
 )
 
-pico_add_extra_outputs(Main)
+pico_add_extra_outputs(${PROJECT_NAME})
