--- a/compose.yml
+++ b/compose.yml
@@ -3,12 +3,12 @@ services:
     platform: linux/arm64
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.dev.master
     network_mode: host
     volumes:
       - ./build:/root/app/build
       - ./pico_lib:/root/pico_lib
-      - ./.pico-sdk:/root/.pico-sdk
-      - ./main.cpp/:/root/app/main.cpp:ro
+      - ./extern:/root/app/extern:ro
+      - ./main.cpp:/root/app/main.cpp:ro
       - ./CMakeLists.txt:/root/app/CMakeLists.txt
     command: ["sleep", "infinity"]
