--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -14,7 +14,7 @@ RUN apt update && apt install -y \
     wget \
     ca-certificates
 
-# Install official ARM GCC toolchain (Debian’s GCC is too old for Pico)
+# Install official ARM GCC toolchain
 RUN wget https://developer.arm.com/-/media/Files/downloads/gnu/14.3.rel1/binrel/arm-gnu-toolchain-14.3.rel1-aarch64-arm-none-eabi.tar.xz && \
     tar -xf arm-gnu-toolchain-14.3.rel1-aarch64-arm-none-eabi.tar.xz && \
     mv arm-gnu-toolchain-14.3.rel1-aarch64-arm-none-eabi /opt/arm-toolchain && \
