--- a/compose.yml
+++ b/compose.yml
@@ -10,5 +10,6 @@ services:
       - ./pico_lib:/root/pico_lib
       - ./extern:/root/app/extern:ro
       - ./main.cpp:/root/app/main.cpp:ro
+      - ./docs:/root/app/docs
       - ./CMakeLists.txt:/root/app/CMakeLists.txt
     command: ["sleep", "infinity"]
