--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ project(${PROJECT_NAME} C CXX ASM)
 pico_sdk_init()
 
 add_subdirectory(../pico_lib pico_lib_build)
-add_subdirectory(extern)
+# add_subdirectory(extern)
 
 add_executable(${PROJECT_NAME}
     main.cpp
@@ -28,20 +28,23 @@ pico_enable_stdio_usb(${PROJECT_NAME} 1)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE pico_stdlib)
 
-if((PICO_BOARD STREQUAL "pico_w") OR (PICO_BOARD STREQUAL "pico2_w"))
-    target_link_libraries(${PROJECT_NAME} PRIVATE
-        pico_cyw43_arch_lwip_threadsafe_background
-    )
-endif()
+# if((PICO_BOARD STREQUAL "pico_w") OR (PICO_BOARD STREQUAL "pico2_w"))
+#     target_link_libraries(${PROJECT_NAME} PRIVATE
+#         # pico_cyw43_arch_lwip_threadsafe_background
+#         # pico_btstack_ble
+#         # pico_btstack_cyw43
+#         # pico_cyw43_arch_none
+#     )
+# endif()
 
 target_link_libraries(${PROJECT_NAME} PRIVATE
-    Extern
+    # Extern
     Shared
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
-    ${CMAKE_CURRENT_LIST_DIR}/extern/include
+    # ${CMAKE_CURRENT_LIST_DIR}/extern/include
     ${CMAKE_CURRENT_LIST_DIR}/pico_lib/include
 )
 
