--- a/pico_lib/CMakeLists.txt
+++ b/pico_lib/CMakeLists.txt
@@ -22,6 +22,10 @@ target_link_libraries(${PROJECT_NAME}
     pico_stdlib
     hardware_adc
     hardware_i2c
+
+    pico_btstack_ble
+    pico_btstack_cyw43
+    pico_cyw43_arch_none
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
