--- a/pico_lib/CMakeLists.txt
+++ b/pico_lib/CMakeLists.txt
@@ -5,9 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(PROJECT_NAME "Shared")
 
-# Pull in the Pico SDK
-# include(pico_sdk_import.cmake)
-# pico_sdk_init()
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern)
 
 file(GLOB_RECURSE SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
@@ -24,6 +22,16 @@ target_link_libraries(${PROJECT_NAME}
     hardware_i2c
 )
 
+if((PICO_BOARD STREQUAL "pico_w") OR (PICO_BOARD STREQUAL "pico2_w"))
+    target_link_libraries(${PROJECT_NAME} PRIVATE
+        pico_lwip_nosys
+        pico_cyw43_arch_lwip_threadsafe_background
+
+        Extern
+    )
+endif()
+
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}/include
+    ${CMAKE_CURRENT_LIST_DIR}/extern/include
 )
